--- a/views/register-form.ejs
+++ b/views/register-form.ejs
@@ -10,11 +10,11 @@
     <h1>Tokopaedi</h1>
     <h5>Situs jual beli online terlengkap, mudah dan aman</h5><br><br><br><br>
     <h3>Registration Form</h3>
-    <form method="post" action="/register">
+    <form method="post" action="/register" style="text-align:left; margin-left:500px">
         <label for="email">Email : </label>
-        <input type="email" name="email" placeholder="Input email here" /> <br><br><br>
+        <input type="email" name="email" placeholder="Input email here" /> <br><br>
         <label for="password">Password : </label>
-        <input type="password" name="password" placeholder="Input password here" /> <br><br><br>
+        <input type="password" name="password" placeholder="Input password here" /> <br><br>
         <label for="role">Daftar sebagai : </label>
         <select name="role">
             <option selected disabled>Pilih salah satu</option>
@@ -22,7 +22,7 @@
             <option value="user">User</option>
         </select> <br><br><br>
         <input type="submit" value="Sign Up">
-        <button><a href="" style="text-decoration:none;">Back to Tokopaedi</a></button>
+        <button><a href="" style="text-decoration:none;">Back to Homepage</a></button>
     </form>
 </body>
 </html>
